@@ -3,4 +3,4 @@ omp-device-properties-i386: $(srcdir)/config/i386/i386-options.c
 	echo arch: x86 x86_64 i386 i486 i586 i686 ia32 >> $@
 	echo isa: sse4 `sed -n '/^static struct ix86_target_opts isa2\?_opts\[\] =/,/^};/p' \
 	  $(srcdir)/config/i386/i386-options.c | \
-	  sed -n 's/",.*$$//;s/\./_/;s/^  { "-m//p'` >> $@
+	  sed -n 's/",.*$$//;s/^  { "-m//p'` >> $@
